changed the max-width to avoid distortion on larger screens
Former-commit-id: 52006178f672fced2a1fe3ed22f6061f0dd44a6c [formerly 285d4b3bb27d405c9d82c9dc0e59571bf66d5839] [formerly 49e2991c2b869b36c462c17831fd1642e3b0b7e5 [formerly d42ed7dcbd77b12ad3d04d79a63dc4e6dd1285bb [formerly b1eecf7aa09ed66dceb4a61e6f7a4a8c6050614b] [formerly 64e5a58fc813664a22ccfd30748a1bd828eed58a]]]
Former-commit-id: a9eda2313671ccde4fd42c3d60fa77bc18f3fd36 [formerly d42ed7dcbd77b12ad3d04d79a63dc4e6dd1285bb [formerly b1eecf7aa09ed66dceb4a61e6f7a4a8c6050614b]]
Former-commit-id: 1f35cbfc1702159c4c17ce143ccc552aa1f69405
Former-commit-id: 8c8ad60a57835e7ff5f701ea6dc7591c5aa81a18
Former-commit-id: 61e66ce79e34cb931626a8f41385cba448f5d0e9

--- a/control/src/pages/careers/styles/CareersSection2.module.css
+++ b/control/src/pages/careers/styles/CareersSection2.module.css
@@ -4,7 +4,8 @@
 }
 
 .section2_header {
-  max-width: 95%;
+  max-width: 1440px;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -31,7 +32,8 @@ div.subSection2 {
 }
 
 .subsection2_content {
-  max-width: 95%;
+  max-width: 1440px;
+  width: 95%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
